<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_Safety" Id="{28cde4d2-948b-4422-9267-2ab700fc1763}">
    <Declaration><![CDATA[TYPE ST_Safety :
STRUCT
    MCPEstopOk AT%I*  : BOOL;
    SafetyOk AT%I*    : BOOL;
    
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>